# Continuous-Health-Monitoring-

./: BLE_connects.py
Android App/: README.MD  local.properties
App Code/: zephyr.hex
App Code/AltBLEBioBandDisplay/: build.gradle.kts  settings.gradle.kts
App Code/BLEBioBandDislpay/: build.gradle.kts  settings.gradle.kts
App Code/BiobandDisplay/: .gitignore  README.md  gradle.properties  local.properties
App Code/TESTDONGLE/: app.overlay  prj.conf
App Code/display_analog_read/: settings.gradle.kts
App Code/nRF52480/: CMakeLists.txt  prj.conf
BiobandDisplay/app/: build.gradle.kts
CH582M Code/: .cproject  .project  .template  ContinuousHealthMonitorChip.launch  ContinuousHealthMonitorChip.wvproj
CH582M Code/.mrs/: ContinuousHealthMonitorChip.mrs-workspace
CH582M Code/APP/: heartrate.c
IMU_code/: IMU_initial_testing
PPG_code/: Ciaran_test.c  Ciaran_test.txt
PPG_code/Ciaran_Testing/: CMakeLists.txt  nrf52840dongle_nrf52840.overlay  prj.conf
PPG_code/PPG_Andrew_Prototyping_Mar9thCodeWithoutIDAC/: CMakeLists.txt  prj.conf
PPG_code/PPG_Andrew_testing/: nrf52840dongle_nrf52840.overlay  prj.conf
PPG_code/PPG_DC_IDAC/: CMakeLists.txt
PPG_code/PPG_IDAC_amb/: CMakeLists.txt
PPG_code/PPG_Samir_Prototyping_Mar9thCodeWithoutIDAC/: CMakeLists.txt  nrf52840dongle_nrf52840.overlay
PPG_code/adc_to_dac_and_analog_read/: CMakeLists.txt  prj.conf
PPG_code/data_parsing/: data  data_parsing.m  (+1 more)
android_app/: README.MD  settings.gradle.kts
eis_code/spi_test/: CMakeLists.txt  nrf52840dongle_nrf52840.overlay  prj.conf
eis_code/spi_test/src/: main.c
(+208 files in other folders)
